--- a/web/style.css
+++ b/web/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap");
 
 :root {
-  --color-default: #cfd2da;
-  --color-hover: white;
+  --color-default: #ffffff;
+  --color-hover: #95EF77;
 }
 
 body {
@@ -29,6 +29,18 @@ p {
   transform: translate(-50%, -50%);
   font-size: 22pt;
   fill: black;
+  color: white;
+  font-weight: normal;
+  font-size: 20px;
+  transition: all 0.3s ease;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.603);
+}
+
+.interaction {
+  /* font-size: 30px !important; */
+  scale: 1.0 !important;
+  color: #95EF77 !important;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.603);
 }
 
 .eye-hover {
@@ -48,12 +60,6 @@ p {
   justify-content: flex-start;
   align-items: center;
   font-family: "Nunito";
-  background: linear-gradient(
-    90deg,
-    rgba(20, 20, 20, 0.7) 0%,
-    rgba(20, 20, 20, 0.6) 66%,
-    rgba(47, 48, 53, 0) 100%
-  );
   font-size: 11pt;
   line-height: 22pt;
   vertical-align: middle;
@@ -64,15 +70,10 @@ p {
   height: 22pt;
   width: 150pt;
   top: 0;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.603);
 }
 
 .option-container:hover {
-  background: linear-gradient(
-    90deg,
-    rgba(30, 30, 30, 0.7) 0%,
-    rgba(30, 30, 30, 0.6) 66%,
-    rgba(57, 58, 63, 0) 100%
-  );
   transform-origin: left top;
   color: var(--color-hover);
   margin-left: 4pt;
